--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,6 +15,9 @@ jobs:
       contents: write
     
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+    
       - name: Github Tag Bump
         id: tag_bump
         uses: anothrNick/github-tag-action@1.67.0
@@ -31,7 +34,9 @@ jobs:
     needs: generate-version
 
     steps:
+    - name: Checkout code
     - uses: actions/checkout@v4
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
