--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -54,4 +54,4 @@ jobs:
           -o packages
 
       - name: Publish
-        run: dotnet nuget push packages/*.nukpg
+        run: dotnet nuget push packages/*.nupkg
