--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,9 +34,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: generate-version
 
+    permissions:
+      contents: write
+      packages: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+
     
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
