--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -61,4 +61,6 @@ jobs:
           -o packages
 
       - name: Publish
+        env:
+          NUGET_AUTH_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
         run: dotnet nuget push packages/*.nupkg
