--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,11 +9,7 @@ on:
  
 jobs:
   generate-version:
-    runs-on: ubuntu-latest
-    
-    permissions:
-      contents: write
-      packages: write
+    runs-on: ubuntu-latest  
     
     steps:
       - name: Checkout code
@@ -35,14 +31,12 @@ jobs:
     needs: generate-version
 
     permissions:
-      contents: write
+      contents: read
       packages: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-
     
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
