--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,60 +1,53 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: CICD
 
 on:
   push:
-    branches: [ "main" ]
- 
+    branches: [main]
+
 jobs:
   generate-version:
-    runs-on: ubuntu-latest  
-    
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-    
+      - uses: actions/checkout@v3
+
       - name: Github Tag Bump
-        id: tag_bump
-        uses: anothrNick/github-tag-action@1.67.0
+        id: tab_bump
+        uses: anothrNick/github-tag-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           INITIAL_VERSION: 1.0.2
           DEFAULT_BUMP: patch
 
     outputs:
-      new_version: ${{ steps.tag_bump.outputs.new_tag }}
-    
+      new_version: ${{ steps.tab_bump.outputs.new_tag }}
+
   package-and-publish-contracts:
     runs-on: ubuntu-latest
     needs: generate-version
 
     permissions:
       contents: read
-      packages: write
+      packages: write        
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-    
+      - uses: actions/checkout@v3
+
       - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 8.0.x
+          dotnet-version: 7.0.x
           source-url: https://nuget.pkg.github.com/${{github.repository_owner}}/index.json
         env:
-          NUGET_AUTH_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
-        
+          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Pack
         run: |
           dotnet pack src/Play.Identity.Contracts/ \
           --configuration Release \
-          -p:PackageVersion=${{ needs.generate-version.outputs.new_version}} \
-          -p:RespositoryUrl=https://github.com/${{github.repository_owner}}/play.identity \
+          -p:PackageVersion=${{ needs.generate-version.outputs.new_version }} \
+          -p:RepositoryUrl=https://github.com/${{github.repository_owner}}/play.identity \
           -o packages
 
       - name: Publish
-        env:
-          NUGET_AUTH_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
         run: dotnet nuget push packages/*.nupkg
