--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   generate-version:
     runs-on: ubuntu-latest
@@ -26,10 +30,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: generate-version
 
-    permissions:
-      contents: read
-      packages: write        
-
     steps:
       - uses: actions/checkout@v3
 
@@ -51,3 +51,5 @@ jobs:
 
       - name: Publish
         run: dotnet nuget push packages/*.nupkg
+        env:
+          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
