--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,10 +4,6 @@ on:
   push:
     branches: [main]
 
-permissions:
-  contents: write
-  packages: write
-
 jobs:
   generate-version:
     runs-on: ubuntu-latest
@@ -30,6 +26,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: generate-version
 
+    permissions:
+      contents: read
+      packages: write        
+
     steps:
       - uses: actions/checkout@v3
 
@@ -49,11 +49,5 @@ jobs:
           -p:RepositoryUrl=https://github.com/${{github.repository_owner}}/play.identity \
           -o packages
 
-      - name: Publish        
-        # run: dotnet nuget push packages/*.nupkg --api-key ${{ secrets.NUGET_AUTH_TOKEN }}
-        run: |
-          dotnet nuget push packages/*.nupkg \
-          --source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json \
-          --api-key ${{secrets.GITHUB_TOKEN }}
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish
+        run: dotnet nuget push packages/*.nupkg
