--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   generate-version:
     runs-on: ubuntu-latest
@@ -26,10 +30,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: generate-version
 
-    permissions:
-      contents: read
-      packages: write        
-
     steps:
       - uses: actions/checkout@v3
 
@@ -50,4 +50,10 @@ jobs:
           -o packages
 
       - name: Publish
-        run: dotnet nuget push packages/*.nupkg
+        run: |
+          dotnet nuget push packages/*.nupkg \
+          --source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json \
+          --api-key ${{ secrets.NUGET_AUTH_TOKEN }}
+        env:
+          NUGET_AUTH_TOKEN: ${{ secrets.NUGET_AUTH_TOKEN }}
+          
