--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,8 +36,9 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 7.0.x
-          source-url: https://nuget.pkg.github.com/${{github.repository_owner}}/index.json
+          dotnet-version: 8.0.x
+          source-url: https://nuget.pkg.github.com/v2trainorg/index.json
+      #source-url: https://nuget.pkg.github.com/${{github.repository_owner}}/index.json
         env:
           NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -46,15 +47,16 @@ jobs:
           dotnet pack src/Play.Identity.Contracts/ \
           --configuration Release \
           -p:PackageVersion=${{ needs.generate-version.outputs.new_version }} \
-          -p:RepositoryUrl=https://github.com/${{github.repository_owner}}/play.identity \
+          -p:RepositoryUrl=https://github.com/v2trainorg/play.identity \   
           -o packages
 
+     #-p:RepositoryUrl=https://github.com/${{github.repository_owner}}/play.identity \
       - name: Publish
         run: |
-          dotnet nuget push packages/*.nupkg \
-          --source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json \
-          --api-key ${{ secrets.NUGET_AUTH_TOKEN }}
-          --verbosity detailed
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.NUGET_AUTH_TOKEN }}
+          dotnet nuget push packages/*.nupkg 
+        #  --source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json \
+        #  --api-key ${{ secrets.NUGET_AUTH_TOKEN }}
+        #  --verbosity detailed
+        #env:
+         # NUGET_AUTH_TOKEN: ${{ secrets.NUGET_AUTH_TOKEN }}
           
